Fix color contrast

--- a/css/src/base.css
+++ b/css/src/base.css
@@ -73,5 +73,5 @@ a {
 
 a:hover,
 a:focus {
-  box-shadow: 0 2px 0 currentcolor !important;
+  box-shadow: inset 0 -2px 0 currentcolor !important;
 }
