--- a/css/src/components.css
+++ b/css/src/components.css
@@ -53,7 +53,7 @@
 }
 
 .Longform a {
-  box-shadow: 0 2px 0 var(--colorGreyLight);
+  box-shadow: inset 0 -2px 0 var(--colorGreyLight);
 }
 
 .Longform ul {
@@ -121,7 +121,6 @@
 
 .SpacedCaps {
   font-family: var(--fontSans);
-  font-weight: 900;
   text-transform: uppercase;
   letter-spacing: 0.1em;
 }
@@ -154,3 +153,26 @@
  .footnotes p {
    color: var(--colorPurpleDark);
  }
+
+ /*
+  * GradientLink
+  */
+
+@supports (mix-blend-mode: color) {
+  .GradientLink {
+    color: #666;
+    position: relative;
+  }
+
+  .GradientLink:before {
+    background-image: var(--gradientOrangePink);
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    mix-blend-mode: color;
+    pointer-events: none;
+  }
+}
